@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2008-2019 LabKey Corporation
+ * Copyright (c) 2008-2026 LabKey Corporation
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -20,6 +20,7 @@ import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 import com.fasterxml.jackson.annotation.PropertyAccessor;
 import com.fasterxml.jackson.databind.ObjectMapper;
 import com.fasterxml.jackson.databind.SerializationFeature;
+import com.fasterxml.jackson.databind.jsontype.PolymorphicTypeValidator;
 import com.fasterxml.jackson.databind.module.SimpleModule;
 import datadog.trace.api.CorrelationIdentifier;
 import datadog.trace.api.Trace;
@@ -53,6 +54,7 @@ import org.labkey.api.util.FileUtil;
 import org.labkey.api.util.GUID;
 import org.labkey.api.util.Job;
 import org.labkey.api.util.JsonUtil;
+import org.labkey.api.util.LabKeyProcessBuilder;
 import org.labkey.api.util.NetworkDrive;
 import org.labkey.api.util.QuietCloser;
 import org.labkey.api.util.URLHelper;
@@ -81,7 +83,6 @@ import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.sql.Time;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.Date;
 import java.util.List;
@@ -101,7 +102,7 @@ import java.util.concurrent.atomic.AtomicLong;
 @JsonIgnoreProperties(value={"_logFilePathName"}, allowGetters = true)  //Property removed. Added here for backwards compatibility
 abstract public class PipelineJob extends Job implements Serializable, ContainerUser
 {
-    public static final FileType FT_LOG = new FileType(Arrays.asList(".log"), ".log", Arrays.asList("text/plain"));
+    public static final FileType FT_LOG = new FileType(List.of(".log"), ".log", List.of("text/plain"));
 
     public static final String PIPELINE_EMAIL_ADDRESS_PARAM = "pipeline, email address";
     public static final String PIPELINE_USERNAME_PARAM = "pipeline, username";
@@ -1259,7 +1260,7 @@ abstract public class PipelineJob extends Job implements Serializable, Container
         }
     }
 
-    public void runSubProcess(ProcessBuilder pb, FileLike dirWork) throws PipelineJobException
+    public void runSubProcess(LabKeyProcessBuilder pb, FileLike dirWork) throws PipelineJobException
     {
         runSubProcess(pb, dirWork, null, 0, false);
     }
@@ -1268,13 +1269,13 @@ abstract public class PipelineJob extends Job implements Serializable, Container
      * If logLineInterval is greater than 1, the first logLineInterval lines of output will be written to the
      * job's main log file.
      */
-    public void runSubProcess(ProcessBuilder pb, FileLike dirWork, FileLike outputFile, int logLineInterval, boolean append)
+    public void runSubProcess(LabKeyProcessBuilder pb, FileLike dirWork, FileLike outputFile, int logLineInterval, boolean append)
             throws PipelineJobException
     {
         runSubProcess(pb, dirWork, outputFile, logLineInterval, append, 0, null);
     }
 
-    public void runSubProcess(ProcessBuilder pb, FileLike dirWork, FileLike outputFile, int logLineInterval, boolean append, long timeout, TimeUnit timeoutUnit)
+    public void runSubProcess(LabKeyProcessBuilder pb, FileLike dirWork, FileLike outputFile, int logLineInterval, boolean append, long timeout, TimeUnit timeoutUnit)
             throws PipelineJobException
     {
         Process proc;
@@ -1898,11 +1899,29 @@ abstract public class PipelineJob extends Job implements Serializable, Container
 
     public static ObjectMapper createObjectMapper()
     {
+        return createObjectMapper(null);
+    }
+
+    /**
+     * Build the pipeline-job ObjectMapper. Polymorphic default typing (NON_FINAL) is always active so the concrete
+     * PipelineJob subclass and its field graph round-trip through {@code @class} type ids on the wire.
+     *
+     * @param typeValidator when non-null, default typing is activated with this {@link PolymorphicTypeValidator}
+     * (a deny-by-default allowlist) instead of the deprecated, unrestricted {@code enableDefaultTyping}. It is consulted
+     * only on deserialization, so only the pipeline-job deserialize path passes one (see {@code PipelineJacksonTyping});
+     * serialization and all other callers pass null and keep the historical permissive behavior.
+     */
+    public static ObjectMapper createObjectMapper(@Nullable PolymorphicTypeValidator typeValidator)
+    {
         ObjectMapper mapper = JsonUtil.DEFAULT_MAPPER.copy()
             .setVisibility(PropertyAccessor.ALL, JsonAutoDetect.Visibility.NONE)
             .setVisibility(PropertyAccessor.FIELD, JsonAutoDetect.Visibility.ANY)
-            .disable(SerializationFeature.FAIL_ON_EMPTY_BEANS)
-            .enableDefaultTyping(ObjectMapper.DefaultTyping.NON_FINAL);
+            .disable(SerializationFeature.FAIL_ON_EMPTY_BEANS);
+
+        if (typeValidator != null)
+            mapper.activateDefaultTyping(typeValidator, ObjectMapper.DefaultTyping.NON_FINAL);
+        else
+            mapper.enableDefaultTyping(ObjectMapper.DefaultTyping.NON_FINAL);
 
         SimpleModule module = new SimpleModule();
         module.addSerializer(new SqlTimeSerialization.SqlTimeSerializer());
