@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2005-2018 Fred Hutchinson Cancer Research Center
+ * Copyright (c) 2005-2026 Fred Hutchinson Cancer Research Center
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -190,7 +190,12 @@ public class IssuesModule extends DefaultModule implements SearchService.Documen
     @Override
     public @NotNull Set<Class<?>> getIntegrationTests()
     {
-        return Collections.singleton(org.labkey.issue.model.IssueManager.TestCase.class);
+        return Set.of(
+            org.labkey.issue.model.IssueManager.TestCase.class,
+            org.labkey.issue.IssuesController.MoveActionContainerScopingTestCase.class,
+            org.labkey.issue.IssuesController.GetUsersForGroupScopingTestCase.class,
+            org.labkey.issue.IssuesController.GetIssuePermissionTestCase.class
+        );
     }
 
     @Override
